# rp-usbaudio

./: .gitignore  CLAUDE.md  CMakeLists.txt  Dockerfile  Makefile  README.md  pico_extras_import.cmake
docs/: DESIGN.md  hardware.md  roadmap.md  troubleshooting.md  usb-audio.md
src/: asrc.c  asrc.h  audio_out.h  audio_ui.h  audio_ui_028.c  audio_ui_096.c  font.c  font.h  i2s_audio.c  i2s_audio.h  i2s_audio.pio  lcd.h  lcd_028.c  lcd_096.c  main.c  pdm_audio.c  pdm_audio.h  pdm_audio.pio  splash.c  splash.h  stats.c  stats.h  usb_audio.c  usb_audio.h
src/lufa/: AudioClassCommon.h  StdDescriptors.h
